--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<div class="total">
+<div class="container">
 
       <a href="bench.html"><img class="Bench" src="Outlines/solid-bench.png" alt="bench artwork"/></a>
 
