--- a/skirt.html
+++ b/skirt.html
@@ -6,4 +6,4 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
-    <video src="seville.mp4" class="skirt" autoplay="autoplay" width="900" height="500" loop="" playsinline autoplay muted loop></video>
+    <video src="Seville.mp4" class="skirt" autoplay="autoplay" width="900" height="500" loop="" playsinline autoplay muted loop></video>
