--- a/water.html
+++ b/water.html
@@ -13,7 +13,7 @@
       <tbody>
         <tr class="water-table" height="300">
           <td width="580">
-            <img src="imgs/Waterchair/silladeagua-lua.jpg" width="500">
+            <img src="imgs/Waterchair/silladeagua-lua.JPG" width="500">
             <img class="" src="imgs/Waterchair/silladeagua.jpg" alt="water chair artwork" width="500" />
           </td>
           <td width="580" align="left">
