update for the day

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!doctype HTML>
 
 <head>
-  <title>palomita makes things</title>
+  <title>paloma izquierdo</title>
   <link rel="stylesheet" href="stylesheet.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Catamaran&display=swap" rel="stylesheet">
+
+  <meta name="robots" content="noindex">
+
+  <link rel="icon" type="image/png" href="dove.png" />
 </head>
 
 <body>
@@ -28,6 +32,8 @@
       <a href="skirt.html"><img class="skirt" src="Outlines/solid-skirt.png" alt="skirt artwork" /></a>
 
       <a href="water.html"><img class="water" src="Outlines/solid-water-chairs.png" alt="water chair artwork" /></a>
+
+      <a href="https://drive.google.com/file/d/1BTu0fkHLChl_vsvB8-Ihr10ddv-L-hiy/view?usp=sharing"><img class="folder" src="Outlines/folder.png" alt="folder outline" /></a>
 </div>
 
 </body>
