--- a/maracas.html
+++ b/maracas.html
@@ -8,17 +8,14 @@
 </head>
 
 <body>
-  <div id="videocontainer">
-    <video src="maracas.mp4" autoplay="autoplay" width="500" height="300" loop="" playsinline autoplay muted loop></video>
-    <br>
-    <br>
-    <br>
+  <div class="maracas1">
     <video src="maracas.mp4" autoplay="autoplay" width="500" height="300" loop="" playsinline autoplay muted loop></video>
   </div>
-
-  <div id="textcontainer">
-    <p>
-    <p>
+  <br>
+  <br>
+  <br>
+  <div class="maracas2">
+    <video src="maracas.mp4" autoplay="autoplay" width="500" height="300" loop="" playsinline autoplay muted loop></video>
   </div>
 
 </body>
