--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Catamaran&display=swap" rel="stylesheet">
 
-  <meta name="robots" content="noindex">
+  <!-- <meta name="robots" content="noindex"> -->
 
   <link rel="icon" type="image/png" href="dove.png" />
 </head>
