--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
 
 <div class="container">
 
-      <a href="bench.html"><img class="Bench" src="Outlines/solid-bench.png" alt="bench artwork"/></a>
+      <a href="bench.html"><img class="Bench" src="Outlines/solid-bench.svg" alt="bench artwork"/></a>
 
-      <a href="billboard.html"><img class="billboard" src="Outlines/solid-billboard.png" alt="billboard artwork"/></a>
+      <a href="billboard.html"><img class="billboard" src="Outlines/solid-billboard.svg" alt="billboard artwork"/></a>
 
-      <a href="broom.html"><img class="broom" src="Outlines/solid-broom.png" alt="broom artwork" /></a>
+      <a href="broom.html"><img class="broom" src="Outlines/solid-broom.svg" alt="broom artwork" /></a>
 
-      <a href="maracas.html"><img class="maracas" src="Outlines/solid-maracas.png" alt="maracas artwork" /></a>
+      <a href="maracas.html"><img class="maracas" src="Outlines/solid-maracas.svg" alt="maracas artwork" /></a>
 
-      <a href="nails.html"><img class="nails" src="Outlines/solid-nails.png" alt="nails artwork" /></a>
+      <a href="nails.html"><img class="nails" src="Outlines/solid-nails.svg" alt="nails artwork" /></a>
 
-      <a href="rocking.html"><img class="rocking" src="Outlines/solid-rocking-chair.png" alt="rocking chair artwork"/></a>
+      <a href="rocking.html"><img class="rocking" src="Outlines/solid-rocking-chair.svg" alt="rocking chair artwork"/></a>
 
-      <a href="skirt.html"><img class="skirt" src="Outlines/solid-skirt.png" alt="skirt artwork" /></a>
+      <a href="skirt.html"><img class="skirt" src="Outlines/solid-skirt.svg" alt="skirt artwork" /></a>
 
-      <a href="water.html"><img class="water" src="Outlines/solid-water-chairs.png" alt="water chair artwork" /></a>
+      <a href="water.html"><img class="water" src="Outlines/solid-water-chairs.svg" alt="water chair artwork" /></a>
 
       <a href="https://drive.google.com/file/d/1BTu0fkHLChl_vsvB8-Ihr10ddv-L-hiy/view?usp=sharing"><img class="folder" src="Outlines/folder.png" alt="folder outline" /></a>
 </div>
