--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <a href="maracas.html"><img class="maracas" src="Outlines/solid-maracas.svg" alt="maracas artwork" /></a>
 
-      <a href="nails.html"><img class="nails" src="Outlines/solid-nails.svg" alt="nails artwork" /></a>
+      <a href="nails.html"><img class="nails" src="Outlines/solid-nails-long.svg" alt="nails artwork" /></a>
 
       <a href="rocking.html"><img class="rocking" src="Outlines/solid-rocking-chair.svg" alt="rocking chair artwork"/></a>
 
