--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>paloma izquierdo</title>
   <link rel="stylesheet" href="stylesheet.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="making a digital space for some three dimensional things">
+  <!-- <meta name="description" content=""> -->
   <meta name="keywords" content="Paloma, Izquierdo, Art, Sculpture">
   <meta name="author" content="Paloma Izquierdo">
   <link rel="preconnect" href="https://fonts.googleapis.com">
