remove cv for now

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       <a href="water.html"><img class="water" src="Outlines/solid-water-chairs.svg" alt="water chair artwork" /></a>
 
-      <a href="https://drive.google.com/file/d/1BTu0fkHLChl_vsvB8-Ihr10ddv-L-hiy/view?usp=sharing"><img class="folder" src="Outlines/folder.png" alt="folder outline" /></a>
+      <!-- <a href=""><img class="folder" src="Outlines/folder.png" alt="folder outline" /></a> -->
 </div>
 
 </body>
