--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <title>paloma izquierdo</title>
   <link rel="stylesheet" href="stylesheet.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <meta name="description" content=""> -->
-  <!-- <meta name="keywords" content="Paloma, Izquierdo, Art, Sculpture">
-  <meta name="author" content="Paloma Izquierdo"> -->
+  <meta name="description" content="">
+  <meta name="keywords" content="Paloma, Izquierdo, Art, Sculpture">
+  <meta name="author" content="Paloma Izquierdo">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Catamaran&display=swap" rel="stylesheet">
 
-  <meta name="robots" content="noindex">
+  <!-- <meta name="robots" content="noindex"> -->
 
   <link rel="icon" type="image/png" href="dove.png" />
 </head>
