--- a/bench.html
+++ b/bench.html
@@ -1,18 +1,49 @@
-<!doctype HTML>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <title>Billboard Bench</title>
-  <link rel="stylesheet" href="stylesheet-pages.css" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>☆</title>
+  <link rel="stylesheet" href="stylesheet-pages.css" />
 </head>
 
-  <div class="row">
-    <div class="row-item"><img src="imgs/Bench/Bench1.jpg" alt=bench artwork width=380 /></div>
-    <div class="row-item"><img src="imgs/Bench/Bench2.jpg" alt=bench artwork width=380 /></div>
-    <div class="row-item"><img src="imgs/Bench/Bench3.jpg" alt=bench artwork width=380 /></div>
-    <div class="row-item"><img src="imgs/Bench/Bench4.jpg" alt=bench artwork width=380 /></div>
-  <div class="row2">
-    <div class="row-item"><img src="imgs/Bench/Bench5.jpg" alt=bench artwork width=380 /></div>
-    <div class="row-item"><img src="imgs/Bench/Bench6.jpg" alt=bench artwork width=380 /></div>
-    <div class="row-item"><img src="imgs/Bench/Bench7.jpg" alt=bench artwork width=380 /></div>
-    </div>
+<body id="bench">
+
+    <main>
+
+      <div class="row-item b1">
+        <img src="imgs/Bench/Bench1.jpg" alt="bench artwork"/>
+      </div>
+
+      <div class="row-item b2">
+        <img src="imgs/Bench/Bench2.jpg" alt="bench artwork"  />
+      </div>
+
+      <div class="row-item b3">
+        <img src="imgs/Bench/Bench3.jpg" alt="bench artwork"  />
+      </div>
+
+      <div class="row-item b4">
+        <img src="imgs/Bench/Bench4.jpg" alt="bench artwork"/>
+      </div>
+
+      <div class="row-item b5">
+        <img src="imgs/Bench/Bench5.jpg" alt="bench artwork" />
+      </div>
+
+      <div class="row-item b6">
+        <img src="imgs/Bench/Bench6.jpg" alt="bench artwork" />
+      </div>
+
+      <div class="row-item b7">
+        <img src="imgs/Bench/Bench7.jpg" alt="bench artwork"/>
+      </div>
+
+
+    </main>
+
+
+</body>
+</html>
