--- a/billboard.html
+++ b/billboard.html
@@ -1,30 +1,37 @@
-<!doctype HTML>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <title>Se Vende Toyota Tundra</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>✦</title>
   <link rel="stylesheet" href="stylesheet-pages.css" />
 </head>
 
-<table class="billboard">
-  <tbody>
-    <tr style="height:200px" align="center" valign="center">
+<body id="billboard">
 
-      <td width="400" height="400">
-        <img src="imgs/Billboard/Billboard2.jpg" alt=billboard />
-      </td>
+  <main>
 
-      <td width="400" height="400">
-        <img src="imgs/Billboard/Billboard5.jpg" alt=billboard />
-      </td>
+    <div class="row-item c1">
+      <img src="imgs/Billboard/Billboard2.jpg" alt=billboard />
+    </div>
 
-      <td width="400" height="400">
-        <img src="imgs/Billboard/Billboard3.jpg" alt=billboard />
-      </td>
+    <div class="row-item c2">
+      <img src="imgs/Billboard/Billboard5.jpg" alt=billboard />
+    </div>
 
-      <td width="400" height="400">
-        <img src="imgs/Billboard/Billboard1.jpg" alt=billboard />
-      </td>
+    <div class="row-item c3">
+      <img src="imgs/Billboard/Billboard3.jpg" alt=billboard />
+    </div>
 
-  </tbody>
-</table>
-</div>
+
+    <div class="row-item c4">
+      <img src="imgs/Billboard/Billboard1.jpg" alt=billboard />
+    </div>
+
+  </main>
+
+</body>
+
+</main>
