--- a/broom.html
+++ b/broom.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <title>Frazada</title>
-  <link rel="stylesheet" href="stylesheet-pages.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>✎</title>
+  <link rel="stylesheet" href="stylesheet-pages.css" />
 </head>
 
-<body>
-  <div id="videocontainer">
-    <center><video src="frazada.mp4" autoplay="autoplay" width="750" height="500" loop="" playsinline autoplay muted loop></video>
-  </div>
+<body id="frazada">
 
-  <div id="textcontainer">
-    <p>
-    <p>
-  </div>
+  <main>
+    <div class="row-item f1">
+      <video src="frazada.mp4" autoplay="autoplay" loop="" playsinline autoplay muted loop></video>
+    </div>
+
+  </main>
 
 </body>
-
-</html>
