--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!doctype HTML>
 
 <head>
-  <title>paloma izquierdo</title>
+  <title>palomita</title>
   <link rel="stylesheet" href="stylesheet.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
-  <meta name="keywords" content="Paloma, Izquierdo, Art, Sculpture">
-  <meta name="author" content="Paloma Izquierdo">
+  <!-- <meta name="keywords" content="Paloma, Izquierdo, Art, Sculpture">
+  <meta name="author" content="Paloma Izquierdo"> -->
+  <meta name="robots" content="noindex">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Catamaran&display=swap" rel="stylesheet">
-
-  <!-- <meta name="robots" content="noindex"> -->
 
   <link rel="icon" type="image/png" href="dove.png" />
 </head>
@@ -32,11 +31,21 @@
 
       <a href="rocking.html"><img class="rocking" src="Outlines/solid-rocking-chair.svg" alt="rocking chair artwork"/></a>
 
-      <a href="skirt.html"><img class="skirt" src="Outlines/solid-skirt.svg" alt="skirt artwork" /></a>
+      <a href="library.html"><img class="ladder" src="Outlines/ladder.png" alt="ladder" /></a>
 
-      <a href="water.html"><img class="water" src="Outlines/solid-water-chairs.svg" alt="water chair artwork" /></a>
+      <a href="long-key.html"><img class="long-key" src="Outlines/long-key.svg" alt="long bronze key" /></a>
 
-      <!-- <a href=""><img class="folder" src="Outlines/folder.png" alt="folder outline" /></a> -->
+      <a href="spiral.html"><img class="spiral" src="Outlines/spiral.png" /></a>
+
+      <a href="https://drive.google.com/file/d/136002JFG5MWRy4ftminFw65TnQV99wGn/view?usp=sharing"><img class="folder" src="Outlines/folder.png" /></a>
+
+      <!-- old works -->
+
+      <!-- <a href="skirt.html"><img class="skirt" src="Outlines/solid-skirt.svg" alt="skirt artwork" /></a> -->
+
+      <!-- <a href="water.html"><img class="water" src="Outlines/solid-water-chairs.svg" alt="water chair artwork" /></a> -->
+
+
 </div>
 
 </body>
