--- a/maracas.html
+++ b/maracas.html
@@ -1,23 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <title>Maracas</title>
-  <link rel="stylesheet" href="stylesheet-pages.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>❀</title>
+  <link rel="stylesheet" href="stylesheet-pages.css" />
 </head>
 
-<body>
-  <div class="maracas1">
-    <video src="maracas.mp4" autoplay="autoplay" width="500" height="300" loop="" playsinline autoplay muted loop></video>
-  </div>
-  <br>
-  <br>
-  <br>
-  <div class="maracas2">
-    <video src="maracas.mp4" autoplay="autoplay" width="500" height="300" loop="" playsinline autoplay muted loop></video>
-  </div>
+<body id="maracas">
+
+  <main>
+    <div class="row-item m1">
+      <video src="maracas.mp4" autoplay="autoplay" loop="" playsinline autoplay muted loop>
+    </div>
+
+  </main>
 
 </body>
-
-</html>
