--- a/nails.html
+++ b/nails.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <title>Unas Acrylicas</title>
-  <link rel="stylesheet" href="stylesheet-pages.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>♡</title>
+  <link rel="stylesheet" href="stylesheet-pages.css" />
 </head>
 
-<body>
-  <table class="nails">
-    <tr>
-      <td><video src="nails.mp4" autoplay="autoplay" width="700" height="400" loop="" playsinline autoplay muted loop></video></td>
-    </tr>
-    <tr>
-      <td><video src="nails-and-rocking-chair.mp4" autoplay="autoplay" width="700" height="400" loop="" playsinline autoplay muted loop></video></td>
-    </tr>
-  </div>
+<body id="nails">
+
+  <main>
+    <div class="row-item n1">
+      <video src="nails.mp4" autoplay="autoplay" loop="" autoplay muted loop playsinline></video>
+    </div>
+
+    <div class="row-item n2">
+      <video src="nails-and-rocking-chair.mp4" autoplay="autoplay" loop="" autoplay muted loop playsinline></video>
+    </div>
+
+  </main>
 
 </body>
 
