--- a/rocking.html
+++ b/rocking.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <title>Sillón</title>
-  <link rel="stylesheet" href="stylesheet-pages.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>☁︎</title>
+  <link rel="stylesheet" href="stylesheet-pages.css" />
 </head>
 
-<body>
-  <table class="rocking-chair">
-    <tr>
-      <td rowspan="2"><video src="rocking-chair.mp4" autoplay="autoplay" width="1000" height="510" loop="" playsinline autoplay muted loop></video></td>
-      <td><video src="rocking-chair-shoes.mp4" autoplay="autoplay" width="500" height="250" loop="" playsinline autoplay muted loop></video></td>
-    </tr>
-    <tr>
-      <td><video src="nails-and-rocking-chair.mp4" autoplay="autoplay" width="500" height="250" loop="" playsinline autoplay muted loop></video></td>
-    </tr>
-  </table>
+<body id="rocking">
 
+  <main>
+    <div class="row-item r1">
+      <video src="rocking-chair.mp4" autoplay="autoplay" loop="" playsinline autoplay muted loop></video>
+    </div>
+
+      <div class="row-item r2">
+        <video src="nails-and-rocking-chair.mp4" autoplay="autoplay" loop="" playsinline autoplay muted loop></video>
+      </div>
+
+      <div class="row-item r3">
+        <video src="rocking-chair-shoes.mp4" autoplay="autoplay" loop="" playsinline autoplay muted loop></video>
+    </div>
+  </main>
 </body>
-
 </html>
