ladder video update

--- a/library.html
+++ b/library.html
@@ -17,7 +17,7 @@
       </div>
 
       <div class="row-item l2">
-        <video src="Ladder-3.mov" autoplay="autoplay" loop="" playsinline autoplay muted loop></video>
+        <video src="ladder-3.mp4" autoplay="autoplay" loop="" playsinline autoplay muted loop></video>
       </div>
 
       <div class="row-item l3">
