--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
 
   <div class="container">
 
-    <a href="rocking.html"><img class="rocking" src="Outlines/solid-rocking-chair.svg" alt="rocking chair artwork" /></a>
+    <a href="rocking.html"><img class="rocking" src="Outlines/solid-rocking-chair.svg" alt="rocking chair artwork" /></a <a href="library.html"><img class="ladder" src="Outlines/ladder.png" alt="ladder" /></a>
 
-      <a href="spiral.html"><img class="spiral" src="Outlines/spiral.png" /></a>
+    <a href="bench.html"><img class="Bench" src="Outlines/solid-bench.svg" alt="bench artwork" /></a>
 
-      <a href="bench.html"><img class="Bench" src="Outlines/solid-bench.svg" alt="bench artwork" /></a>
+    <a href="spiral.html"><img class="spiral" src="Outlines/spiral.png" /></a>
 
-      <a href="billboard.html"><img class="billboard" src="Outlines/solid-billboard.svg" alt="billboard artwork" /></a>
+    <a href="billboard.html"><img class="billboard" src="Outlines/solid-billboard.svg" alt="billboard artwork" /></a>
 
-      <a href="broom.html"><img class="broom" src="Outlines/solid-broom.svg" alt="broom artwork" /></a>
+    <a href="broom.html"><img class="broom" src="Outlines/solid-broom.svg" alt="broom artwork" /></a>
 
-      <a href="maracas.html"><img class="maracas" src="Outlines/solid-maracas.svg" alt="maracas artwork" /></a>
+    <a href="maracas.html"><img class="maracas" src="Outlines/solid-maracas.svg" alt="maracas artwork" /></a>
 
-      <a href="nails.html"><img class="nails" src="Outlines/solid-nails-long.svg" alt="nails artwork" /></a>
+    <a href="nails.html"><img class="nails" src="Outlines/solid-nails-long.svg" alt="nails artwork" /></a>
 
-      <a href="library.html"><img class="ladder" src="Outlines/ladder.png" alt="ladder" /></a>
 
-      <a href="long-key.html"><img class="long-key" src="Outlines/long-key.svg" alt="long bronze key" /></a>
 
-        <a href="https://drive.google.com/file/d/136002JFG5MWRy4ftminFw65TnQV99wGn/view?usp=sharing"><img class="folder" src="Outlines/folder.png" /></a>
+    <a href="long-key.html"><img class="long-key" src="Outlines/long-key.svg" alt="long bronze key" /></a>
+
+    <a href="https://drive.google.com/file/d/136002JFG5MWRy4ftminFw65TnQV99wGn/view?usp=sharing"><img class="folder" src="Outlines/folder.png" /></a>
 
 
   </div>
