--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
   <div class="container">
 
-    <a href="rocking.html"><img class="rocking" src="Outlines/solid-rocking-chair.svg" alt="rocking chair artwork" /></a <a href="library.html"><img class="ladder" src="Outlines/ladder.png" alt="ladder" /></a>
+    <a href="rocking.html"><img class="rocking" src="Outlines/solid-rocking-chair.svg" alt="rocking chair artwork" /></a>
+
+    <a href="library.html"><img class="ladder" src="Outlines/ladder.png" alt="ladder" /></a>
 
     <a href="bench.html"><img class="Bench" src="Outlines/solid-bench.svg" alt="bench artwork" /></a>
 
@@ -32,7 +34,6 @@
     <a href="maracas.html"><img class="maracas" src="Outlines/solid-maracas.svg" alt="maracas artwork" /></a>
 
     <a href="nails.html"><img class="nails" src="Outlines/solid-nails-long.svg" alt="nails artwork" /></a>
-
 
 
     <a href="long-key.html"><img class="long-key" src="Outlines/long-key.svg" alt="long bronze key" /></a>
