--- a/spiral.html
+++ b/spiral.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>꩜</title>
   <link rel="stylesheet" href="stylesheet-pages.css" />
+
+  <link rel="icon" type="image/png" href="dove.png" />
 </head>
 
 <body id="spiral">
