--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <link rel="stylesheet" href="stylesheet.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
-  <!-- <meta name="keywords" content="Paloma, Izquierdo, Art, Sculpture">
-  <meta name="author" content="Paloma Izquierdo"> -->
-  <meta name="robots" content="noindex">
+  <meta name="keywords" content="Paloma, Izquierdo, Art, Sculpture">
+  <meta name="author" content="Paloma Izquierdo">
+  <!-- <meta name="robots" content="noindex"> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Catamaran&display=swap" rel="stylesheet">
