--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype HTML>
 
 <head>
-  <title>palomita</title>
+  <title>paloma</title>
   <link rel="stylesheet" href="stylesheet.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
+  <meta name="description" content="some things i made">
   <meta name="keywords" content="Paloma, Izquierdo, Art, Sculpture">
   <meta name="author" content="Paloma Izquierdo">
   <!-- <meta name="robots" content="noindex"> -->
