adding antenna project

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype HTML>
 
 <head>
-  
+
   <title>paloma</title>
   <link rel="stylesheet" href="stylesheet.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +17,8 @@
 <body>
 
   <div class="container">
+
+    <a href="antennas.html"><img class="antennas" src="Outlines/railing.svg" alt="antennas artwork" /></a>
 
     <a href="rocking.html"><img class="rocking" src="Outlines/solid-rocking-chair.svg" alt="rocking chair artwork" /></a>
 
