--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>paloma</title>
   <link rel="stylesheet" href="stylesheet.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="some things i made">
-  <meta name="keywords" content="Paloma, Izquierdo, Art, Sculpture">
+  <meta name="description" content="🔨🔨🔨">
+  <meta name="keywords" content="Paloma, Izquierdo, Art, Sculpture, Inventor">
   <meta name="author" content="Paloma Izquierdo">
   <!-- <meta name="robots" content="noindex"> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
