rocking chair color correct edit

--- a/rocking.html
+++ b/rocking.html
@@ -15,7 +15,7 @@
 
   <main>
     <div class="row-item r1">
-      <video src="rocking-chair.mp4" autoplay="autoplay" loop="" playsinline autoplay muted loop></video>
+      <video src="rocking_2022.mp4" autoplay="autoplay" loop="" playsinline autoplay muted loop></video>
     </div>
 
       <div class="row-item r2">
