--- a/antennas.html
+++ b/antennas.html
@@ -15,27 +15,27 @@
 
     <main>
       <div class="row-item a1">
-        <img src="imgs/Antennas/bikerack.jpg" />
+        <img src="imgs/Antennas/bikerack.jpg" loading="lazy"/>
       </div>
 
       <div class="row-item a2">
-        <img src="imgs/Antennas/dustpan.jpg" />
+        <img src="imgs/Antennas/dustpan.jpg" loading="lazy" />
       </div>
 
       <div class="row-item a3">
-        <img src="imgs/Antennas/wallplug.jpg" />
+        <img src="imgs/Antennas/wallplug.jpg" loading="lazy"/>
       </div>
 
       <div class="row-item a4">
-        <img src="imgs/Antennas/railing.jpg" />
+        <img src="imgs/Antennas/railing.jpg" loading="lazy"/>
       </div>
 
       <div class="row-item a5">
-        <img src="imgs/Antennas/trashcan.jpg" />
+        <img src="imgs/Antennas/trashcan.jpg" loading="lazy"/>
       </div>
 
       <div class="row-item a6">
-        <img src="imgs/Antennas/vent.JPG" />
+        <img src="imgs/Antennas/vent.JPG" loading="lazy"/>
       </div>
 
   </div>
