--- a/bench.html
+++ b/bench.html
@@ -16,31 +16,31 @@
     <main>
 
       <div class="row-item b1">
-        <img src="imgs/Bench/Bench1.jpg" alt="bench artwork"/>
+        <img src="imgs/Bench/Bench1.jpg" alt="bench artwork" loading="lazy"/>
       </div>
 
       <div class="row-item b2">
-        <img src="imgs/Bench/Bench2.jpg" alt="bench artwork"  />
+        <img src="imgs/Bench/Bench2.jpg" alt="bench artwork"  loading="lazy"/>
       </div>
 
       <div class="row-item b3">
-        <img src="imgs/Bench/Bench3.jpg" alt="bench artwork"  />
+        <img src="imgs/Bench/Bench3.jpg" alt="bench artwork"  loading="lazy"/>
       </div>
 
       <div class="row-item b4">
-        <img src="imgs/Bench/Bench4.jpg" alt="bench artwork"/>
+        <img src="imgs/Bench/Bench4.jpg" alt="bench artwork" loading="lazy"/>
       </div>
 
       <div class="row-item b5">
-        <img src="imgs/Bench/Bench5.jpg" alt="bench artwork" />
+        <img src="imgs/Bench/Bench5.jpg" alt="bench artwork" loading="lazy"/>
       </div>
 
       <div class="row-item b6">
-        <img src="imgs/Bench/Bench6.jpg" alt="bench artwork" />
+        <img src="imgs/Bench/Bench6.jpg" alt="bench artwork" loading="lazy"/>
       </div>
 
       <div class="row-item b7">
-        <img src="imgs/Bench/Bench7.jpg" alt="bench artwork"/>
+        <img src="imgs/Bench/Bench7.jpg" alt="bench artwork" loading="lazy"/>
       </div>
 
 
