--- a/billboard.html
+++ b/billboard.html
@@ -16,20 +16,20 @@
   <main>
 
     <div class="row-item c1">
-      <img src="imgs/Billboard/Billboard2.jpg" alt=billboard />
+      <img src="imgs/Billboard/Billboard2.jpg" alt="billboard" loading="lazy" />
     </div>
 
     <div class="row-item c2">
-      <img src="imgs/Billboard/Billboard5.jpg" alt=billboard />
+      <img src="imgs/Billboard/Billboard5.jpg" alt="billboard" loading="lazy"/>
     </div>
 
     <div class="row-item c3">
-      <img src="imgs/Billboard/Billboard3.jpg" alt=billboard />
+      <img src="imgs/Billboard/Billboard3.jpg" alt="billboard" loading="lazy" />
     </div>
 
 
     <div class="row-item c4">
-      <img src="imgs/Billboard/Billboard1.jpg" alt=billboard />
+      <img src="imgs/Billboard/Billboard1.jpg" alt="billboard" loading="lazy"/>
     </div>
 
   </main>
