--- a/library.html
+++ b/library.html
@@ -27,15 +27,15 @@
       </div>
 
       <div class="row-item l4">
-        <img src="imgs/library/Falling-key.jpg" />
+        <img src="imgs/library/Falling-key.jpg" loading="lazy"/>
       </div>
 
       <div class="row-item l5">
-        <img src="imgs/library/Paperairplane.jpg" />
+        <img src="imgs/library/Paperairplane.jpg" loading="lazy"/>
       </div>
 
       <div class="row-item l6">
-        <img src="imgs/library/Pencil.JPG" />
+        <img src="imgs/library/Pencil.JPG" loading="lazy"/>
       </div>
 
   </div>
