--- a/long-key.html
+++ b/long-key.html
@@ -16,11 +16,11 @@
   <main>
 
     <div class="row-item k1">
-      <img src="imgs/long-key/falling-key.jpg"/>
+      <img src="imgs/long-key/falling-key.jpg" loading="lazy"/>
     </div>
 
     <div class="row-item k2">
-      <img src="imgs/long-key/moving-key.jpg"/>
+      <img src="imgs/long-key/moving-key.jpg" loading="lazy"/>
     </div>
 
   </main>
