--- a/index.html
+++ b/index.html
@@ -18,28 +18,28 @@
 
   <div class="container">
 
-    <a href="antennas.html"><img class="antennas" src="Outlines/railing.svg" alt="antennas artwork" /></a>
+    <a href="antennas.html"><img class="antennas" src="Outlines/railing.svg" alt="antennas artwork" loading="lazy"/></a>
 
-    <a href="rocking.html"><img class="rocking" src="Outlines/solid-rocking-chair.svg" alt="rocking chair artwork" /></a>
+    <a href="rocking.html"><img class="rocking" src="Outlines/solid-rocking-chair.svg" alt="rocking chair artwork" loading="lazy"/></a>
 
-    <a href="library.html"><img class="ladder" src="Outlines/ladder.png" alt="ladder" /></a>
+    <a href="library.html"><img class="ladder" src="Outlines/ladder.png" alt="ladder" loading="lazy"/></a>
 
-    <a href="bench.html"><img class="Bench" src="Outlines/solid-bench.svg" alt="bench artwork" /></a>
+    <a href="bench.html"><img class="Bench" src="Outlines/solid-bench.svg" alt="bench artwork" loading="lazy"/></a>
 
-    <a href="spiral.html"><img class="spiral" src="Outlines/spiral.png" /></a>
+    <a href="spiral.html"><img class="spiral" src="Outlines/spiral.png" loading="lazy"/></a>
 
-    <a href="billboard.html"><img class="billboard" src="Outlines/solid-billboard.svg" alt="billboard artwork" /></a>
+    <a href="billboard.html"><img class="billboard" src="Outlines/solid-billboard.svg" alt="billboard artwork" loading="lazy"/></a>
 
-    <a href="broom.html"><img class="broom" src="Outlines/solid-broom.svg" alt="broom artwork" /></a>
+    <a href="broom.html"><img class="broom" src="Outlines/solid-broom.svg" alt="broom artwork" loading="lazy"/></a>
 
-    <a href="maracas.html"><img class="maracas" src="Outlines/solid-maracas.svg" alt="maracas artwork" /></a>
+    <a href="maracas.html"><img class="maracas" src="Outlines/solid-maracas.svg" alt="maracas artwork" loading="lazy"/></a>
 
-    <a href="nails.html"><img class="nails" src="Outlines/solid-nails-long.svg" alt="nails artwork" /></a>
+    <a href="nails.html"><img class="nails" src="Outlines/solid-nails-long.svg" alt="nails artwork" loading="lazy"/></a>
 
 
-    <a href="long-key.html"><img class="long-key" src="Outlines/long-key.svg" alt="long bronze key" /></a>
+    <a href="long-key.html"><img class="long-key" src="Outlines/long-key.svg" alt="long bronze key" loading="lazy"/></a>
 
-    <a href="https://drive.google.com/file/d/1bO3qHv0tigbxD2GuCtDeWp5haFvgmk2x/view?usp=sharing"><img class="folder" src="Outlines/folder.png" /></a>
+    <a href="https://drive.google.com/file/d/1bO3qHv0tigbxD2GuCtDeWp5haFvgmk2x/view?usp=sharing"><img class="folder" src="Outlines/folder.png" loading="lazy"/></a>
 
 
   </div>
