--- a/water.html
+++ b/water.html
@@ -13,8 +13,8 @@
       <tbody>
         <tr class="water-table" height="300">
           <td width="580">
-            <img src="imgs/Waterchair/silladeagua-lua.JPG" width="500">
-            <img class="" src="imgs/Waterchair/silladeagua.jpg" alt="water chair artwork" width="500" />
+            <img src="imgs/Waterchair/silladeagua-lua.JPG" width="500" loading="lazy">
+            <img class="" src="imgs/Waterchair/silladeagua.jpg" alt="water chair artwork" width="500" loading="lazy"/>
           </td>
           <td width="580" align="left">
             <video src="water-chair.mp4" autoplay="autoplay" width="500" height="300" loop="" playsinline autoplay muted loop></video>
