--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <a href="long-key.html"><img class="long-key" src="Outlines/long-key.svg" alt="long bronze key" loading="lazy"/></a>
 
-    <a href="https://drive.google.com/file/d/1bO3qHv0tigbxD2GuCtDeWp5haFvgmk2x/view?usp=sharing"><img class="folder" src="Outlines/folder.png" loading="lazy"/></a>
+    <a href="https://docs.google.com/spreadsheets/d/1QminhjPAfdsEO6YoBMa7Aa51HmZBIksU07rTDb5QR2A/edit?usp=sharing"><img class="folder" src="Outlines/folder.png" loading="lazy"/></a>
 
 
   </div>
