--- a/index.html
+++ b/index.html
@@ -18,33 +18,32 @@
 
   <div class="container">
 
-    <a href="antennas.html"><img class="antennas" src="Outlines/railing.svg" alt="antennas artwork" loading="lazy"/></a>
+    <a href="antennas.html"><img class="antennas" src="Outlines/white/railing_white.svg" alt="antennas artwork" loading="lazy"/></a>
 
-    <a href="rocking.html"><img class="rocking" src="Outlines/solid-rocking-chair.svg" alt="rocking chair artwork" loading="lazy"/></a>
+    <a href="rocking.html"><img class="rocking" src="Outlines/white/rockingchair_white.svg" alt="rocking chair artwork" loading="lazy"/></a>
 
-    <a href="library.html"><img class="ladder" src="Outlines/ladder.png" alt="ladder" loading="lazy"/></a>
+    <a href="library.html"><img class="ladder" src="Outlines/white/ladder_white.svg" alt="ladder" loading="lazy"/></a>
 
-    <a href="bench.html"><img class="Bench" src="Outlines/solid-bench.svg" alt="bench artwork" loading="lazy"/></a>
+    <a href="bench.html"><img class="Bench" src="Outlines/white/bench_white.svg" alt="bench artwork" loading="lazy"/></a>
 
-    <a href="spiral.html"><img class="spiral" src="Outlines/spiral.png" loading="lazy"/></a>
+    <a href="spiral.html"><img class="spiral" src="Outlines/white/spiral_white.svg" loading="lazy"/></a>
 
-    <a href="billboard.html"><img class="billboard" src="Outlines/solid-billboard.svg" alt="billboard artwork" loading="lazy"/></a>
+    <a href="billboard.html"><img class="billboard" src="Outlines/white/billboard_white.svg" alt="billboard artwork" loading="lazy"/></a>
 
-    <a href="broom.html"><img class="broom" src="Outlines/solid-broom.svg" alt="broom artwork" loading="lazy"/></a>
+    <a href="maracas.html"><img class="maracas" src="Outlines/white/maracas_white.svg" alt="maracas artwork" loading="lazy"/></a>
 
-    <a href="maracas.html"><img class="maracas" src="Outlines/solid-maracas.svg" alt="maracas artwork" loading="lazy"/></a>
+    <a href="nails.html"><img class="nails" src="Outlines/white/nails_white.svg" alt="nails artwork" loading="lazy"/></a>
 
-    <a href="nails.html"><img class="nails" src="Outlines/solid-nails-long.svg" alt="nails artwork" loading="lazy"/></a>
+    <a href="long-key.html"><img class="long-key" src="Outlines/white/key_white.svg" alt="long bronze key" loading="lazy"/></a>
 
-
-    <a href="long-key.html"><img class="long-key" src="Outlines/long-key.svg" alt="long bronze key" loading="lazy"/></a>
-
-    <a href="https://docs.google.com/spreadsheets/d/1QminhjPAfdsEO6YoBMa7Aa51HmZBIksU07rTDb5QR2A/edit?usp=sharing"><img class="folder" src="Outlines/folder.png" loading="lazy"/></a>
+    <a href="https://docs.google.com/spreadsheets/d/1QminhjPAfdsEO6YoBMa7Aa51HmZBIksU07rTDb5QR2A/edit?usp=sharing"><img class="folder" src="Outlines/white/folder_white.png" loading="lazy"/></a>
 
 
   </div>
 
   <!-- old works -->
+
+  <!-- ?<a href="broom.html"><img class="broom" src="Outlines/solid-broom.svg" alt="broom artwork" loading="lazy"/></a> -->
 
   <!-- <a href="skirt.html"><img class="skirt" src="Outlines/solid-skirt.svg" alt="skirt artwork" /></a> -->
 
