updated ceiling, railing and mdpls

--- a/index.html
+++ b/index.html
@@ -16,29 +16,49 @@
 
 <body>
 
-  <div class="container">
-
-    <a href="antennas.html"><img class="antennas" src="Outlines/white/railing_white.svg" alt="antennas artwork" loading="lazy"/></a>
-
-    <a href="rocking.html"><img class="rocking" src="Outlines/white/rockingchair_white.svg" alt="rocking chair artwork" loading="lazy"/></a>
-
-    <a href="library.html"><img class="ladder" src="Outlines/white/ladder_white.svg" alt="ladder" loading="lazy"/></a>
-
-    <a href="bench.html"><img class="Bench" src="Outlines/white/bench_white.svg" alt="bench artwork" loading="lazy"/></a>
-
-    <a href="spiral.html"><img class="spiral" src="Outlines/white/spiral_white.svg" loading="lazy"/></a>
-
-    <a href="billboard.html"><img class="billboard" src="Outlines/white/billboard_white.svg" alt="billboard artwork" loading="lazy"/></a>
-
-    <a href="maracas.html"><img class="maracas" src="Outlines/white/maracas_white.svg" alt="maracas artwork" loading="lazy"/></a>
-
-    <a href="nails.html"><img class="nails" src="Outlines/white/nails_white.svg" alt="nails artwork" loading="lazy"/></a>
-
-    <a href="long-key.html"><img class="long-key" src="Outlines/white/key_white.svg" alt="long bronze key" loading="lazy"/></a>
-
-    <a href="https://docs.google.com/spreadsheets/d/1QminhjPAfdsEO6YoBMa7Aa51HmZBIksU07rTDb5QR2A/edit?usp=sharing"><img class="folder" src="Outlines/white/folder_white.png" loading="lazy"/></a>
+  <div class="carousel">
+    <div class="slide">
+      <div class="container">
+        <a href="ceiling.html"><img class="ceiling" src="Outlines/white/ceiling.svg" alt="thesis artwork"
+            loading="lazy" /></a>
 
 
+        <a href="Railing.html"><img class="Railing" src="Outlines/white/railing.svg" alt="railing" /></a>
+
+        <a href="long-key.html"><img class="long-key" src="Outlines/white/key_white.svg" alt="long bronze key"
+            loading="lazy" /></a>
+
+        <a href="antennas.html"><img class="antennas" src="Outlines/white/railing_white.svg" alt="antennas artwork"
+            loading="lazy" /></a>
+
+        <a href="spiral.html"><img class="spiral" src="Outlines/white/spiral_white.svg" loading="lazy" /></a>
+
+        <a href="library.html"><img class="ladder" src="Outlines/white/ladder_white.svg" alt="ladder"
+            loading="lazy" /></a>
+
+        <a href="rocking.html"><img class="rocking" src="Outlines/white/rockingchair_white.svg"
+            alt="rocking chair artwork" loading="lazy" /></a>
+
+        <a href="bench.html"><img class="Bench" src="Outlines/white/bench_white.svg" alt="bench artwork"
+            loading="lazy" /></a>
+
+
+        <a href="billboard.html"><img class="billboard" src="Outlines/white/billboard_white.svg" alt="billboard artwork"
+            loading="lazy" /></a>
+
+        <a href="maracas.html"><img class="maracas" src="Outlines/white/maracas_white.svg" alt="maracas artwork"
+            loading="lazy" /></a>
+
+        <a href="nails.html"><img class="nails" src="Outlines/white/nails_white.svg" alt="nails artwork"
+            loading="lazy" /></a>
+
+        <a href="MDPLS.html"><img class="MDPLS" src="Outlines/white/MDPLS.png"
+            alt="Miami Dade Public Library System" /></a>
+
+        <a href="https://docs.google.com/spreadsheets/d/1QminhjPAfdsEO6YoBMa7Aa51HmZBIksU07rTDb5QR2A/edit?usp=sharing"><img
+            class="folder" src="Outlines/white/folder_white.png" loading="lazy" /></a>
+      </div>
+    </div>
   </div>
 
   <!-- old works -->
