--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             loading="lazy" /></a>
 
 
-        <a href="Railing.html"><img class="Railing" src="Outlines/white/railing.svg" alt="railing" /></a>
+        <a href="railing.html"><img class="railing" src="Outlines/white/railing.svg" alt="railing" /></a>
 
         <a href="long-key.html"><img class="long-key" src="Outlines/white/key_white.svg" alt="long bronze key"
             loading="lazy" /></a>
