fulanita magnifying glass

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="stylesheet.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="🔨🔨🔨">
-  <meta name="keywords" content="Paloma, Izquierdo, Art, Sculpture, Inventor">
+  <meta name="keywords" content="Paloma, Izquierdo, Art, Sculpture">
   <meta name="author" content="Paloma Izquierdo">
   <!-- <meta name="robots" content="noindex"> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -55,9 +55,14 @@
         <a href="MDPLS.html"><img class="MDPLS" src="Outlines/white/MDPLS.png"
             alt="Miami Dade Public Library System" /></a>
 
+        <a href="https://cache-cache.money/"><img
+              class="fulanita" src="Outlines/white/magnifyingglass.svg" loading="lazy" /></a>
+         </div>
+
         <a href="https://docs.google.com/spreadsheets/d/1QminhjPAfdsEO6YoBMa7Aa51HmZBIksU07rTDb5QR2A/edit?usp=sharing"><img
             class="folder" src="Outlines/white/folder_white.png" loading="lazy" /></a>
-      </div>
+
+      
     </div>
   </div>
 
