--- a/bench.html
+++ b/bench.html
@@ -15,6 +15,10 @@
 
     <main>
 
+      <div class="row-item b8">
+        <img src="imgs/Bench/Bench.gif" alt="bench artwork" loading="lazy"/>
+      </div>
+      
       <div class="row-item b1">
         <img src="imgs/Bench/Bench1.jpg" alt="bench artwork" loading="lazy"/>
       </div>
@@ -43,6 +47,7 @@
         <img src="imgs/Bench/Bench7.jpg" alt="bench artwork" loading="lazy"/>
       </div>
 
+    
 
     </main>
 
