--- a/MDPLS.html
+++ b/MDPLS.html
@@ -1,4 +1,4 @@
-<!doctype HTML>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,9 +7,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>⬚</title>
   <link rel="stylesheet" href="stylesheet-pages.css" />
-
   <link rel="icon" type="image/png" href="dove.png" />
 </head>
 
+<body>
 
-  <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/812941173?h=c643888d13&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Social Instruments"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+  <main>
+
+  <iframe class="video-library"
+    src="https://player.vimeo.com/video/812941173?h=c643888d13&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+    frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+   frameborder="0"
+    allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+
+  </main>
+
+  <p style="color: white;"><i>Social Instruments</i>, 2021<br> 
+    Red oak, casters, ink on transparent paper, basswood, graphite, aluminum, rubber, bell, arduino, servo motor, acrylic, archival box, flyers, magazine holders, archival Miami Dade Public library flyers
+<br><br>
+Expanded library cart installed at Miami-Dade Public Library System (MDPLS). Copy of library furniture documents, expanded pencils, automated bell, library floor plan, archival box with flyers, and altered MDPLS archival flyers in magazine holders.<br>
+Support from Vasari Projects + Oolite Arts 
+ </p>
+
+
+</body>
+
+</html>
