--- a/library.html
+++ b/library.html
@@ -7,39 +7,55 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>*</title>
   <link rel="stylesheet" href="stylesheet-pages.css" />
-
   <link rel="icon" type="image/png" href="dove.png" />
 </head>
 
 <body id="library">
-
-    <main>
-      <div class="row-item l1">
-        <video src="Book Glitch-2.mp4" autoplay="autoplay" loop="" playsinline autoplay muted loop></video>
+  <main>
+    <div class="row-item l1">
+      <div class="video-wrapper">
+        <iframe
+          src="https://player.vimeo.com/video/650434573?h=9e3d71423a&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+          frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
       </div>
+    </div>
 
-      <div class="row-item l2">
-        <video src="ladder-3.mp4" autoplay="autoplay" loop="" playsinline autoplay muted loop></video>
+    <div class="row-item l2">
+      <div class="video-wrapper">
+        <iframe
+          src="https://player.vimeo.com/video/650433965?h=344d7ea1a0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+          frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
+          title="Automized Ladder"></iframe>
       </div>
+    </div>
 
-      <div class="row-item l3">
-        <video src="Ringing Bell.mp4" autoplay="autoplay" loop="" playsinline autoplay muted loop></video>
+    <div class="row-item l3">
+      <div class="video-wrapper">
+        <iframe
+          src="https://player.vimeo.com/video/742007303?h=7702b4e9be&amp;title=0&amp;byline=0&amp;portrait=0&amp;speed=0&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479/embed"
+          frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
       </div>
+    </div>
 
-      <div class="row-item l4">
-        <img src="imgs/library/Falling-key.jpg" loading="lazy"/>
-      </div>
+    <div class="row-item l4">
+      <img src="imgs/library/Falling-key.jpg" loading="lazy" />
+    </div>
 
-      <div class="row-item l5">
-        <img src="imgs/library/Paperairplane.jpg" loading="lazy"/>
-      </div>
+    <div class="row-item l5">
+      <img src="imgs/library/Paperairplane.jpg" loading="lazy" />
+    </div>
 
-      <div class="row-item l6">
-        <img src="imgs/library/Pencil.JPG" loading="lazy"/>
-      </div>
-
-  </div>
+    <div class="row-item l6">
+      <img src="imgs/library/Pencil.JPG" loading="lazy" />
+    </div>
   </main>
+
+  <p style="color: white;"><i>Library Disruptions</i>, 2022<br>
+    Bass wood, idk-jet print on adhesive paper<br>
+    Red oak and linear actuator, New Haven Public Library Book, Arduino and Servo Motor, Ringing Bell, and Arduino
+    </p>
+
+
 </body>
 
 </html>
