--- a/long-key.html
+++ b/long-key.html
@@ -23,6 +23,16 @@
       <img src="imgs/long-key/moving-key.jpg" loading="lazy"/>
     </div>
 
+<div class="grid-item caption6">
+  <p style="color: white;"><i>falling key</i>, 2021<br> 
+    Bronze</p>
+    </div>
+
+    <div class="grid-item caption7">
+      <p style="color: white;"><i>rotated key</i>, 2021<br> 
+       Bronze</p>
+    </div>
+
   </main>
 
 </body>
