--- a/maracas.html
+++ b/maracas.html
@@ -20,4 +20,7 @@
 
   </main>
 
+    <p style="color: white;"><i> Maracas Automaticas</i>, 2017<br> 
+      Maracas, motorized oscillator, power supply, rubber bands </p>
+
 </body>
