--- a/nails.html
+++ b/nails.html
@@ -24,6 +24,12 @@
 
   </main>
 
+  <p style="color: white;"><i>Uñas acrilicas</i>, 2018<br> 
+    Acrylic nails, tube, magnets, motor, arduino, acrylic holder, paperclips
+ </p>>
+
+
+
 </body>
 
 </html>
