--- a/railing.html
+++ b/railing.html
@@ -13,9 +13,13 @@
 
 <body id="railing">
 
-  <main>
-    <img src="imgs/Railing/Railing.jpg" loading="lazy">
-
+  <main><center>
+    <img src="imgs/Railing/Railing.jpg" width="85%" loading="lazy">
+  </center>
   </main>
+
+  <p style="color: white;"><i>RailingDetour_Sheet1_A1:A6_B1:E1</i>, 2023<br> 
+    Steel, paint, hardware
+ </p>>
 
 </body>
