--- a/rocking.html
+++ b/rocking.html
@@ -26,5 +26,10 @@
         <video src="rocking-chair-shoes.mp4" autoplay="autoplay" loop="" playsinline autoplay muted loop></video>
     </div>
   </main>
+
+  <p style="color: white;"><i> Sillón</i>, 2018<br> 
+    EMT Conduit pipes, rubbercord, heels, arduino, Reys Pizza bag
+ </p>>
+
 </body>
 </html>
