--- a/antennas.html
+++ b/antennas.html
@@ -40,6 +40,11 @@
 
   </div>
   </main>
+
+  <p style="color: white;"><i>Mimicking Waves</i>, 2022<br>
+    Aluminum, speaker cable, FM radio, radio waves
+    </p>
+    
 </body>
 
 </html>
