--- a/bench.html
+++ b/bench.html
@@ -47,10 +47,12 @@
         <img src="imgs/Bench/Bench7.jpg" alt="bench artwork" loading="lazy"/>
       </div>
 
-    
-
     </main>
 
+    <p style="color: white;"><i>Banco de Parque</i>, 2019<br>
+      Bass wood, steel, ink jet print<br>
+      Manual trivision billboard park bench with advertisements printed onto the backrest
+      </p>
 
 </body>
 </html>
