--- a/billboard.html
+++ b/billboard.html
@@ -34,6 +34,11 @@
 
   </main>
 
+  <p style="color: white;"><i>SE VENDE TOYOTA TUNDRA DEL 2003</i>, 2019<br>
+    Bass wood, idk-jet print on adhesive paper<br>
+    Manual trivision billboard trying to sell my uncles 2003 Toyota Tundra from 3 angles
+    </p>
+
 </body>
 
 </main>
