--- a/ceiling.html
+++ b/ceiling.html
@@ -7,9 +7,86 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>▦</title>
   <link rel="stylesheet" href="stylesheet-pages.css" />
-
   <link rel="icon" type="image/png" href="dove.png" />
 </head>
 
+<body>
 
-  <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/814364899?h=50a1051200&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Frameworks_Ceiling_Sheet1copy"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+  <div class="video-container">
+    <iframe class="video"
+      src="https://player.vimeo.com/video/814364899?h=50a1051200&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+      frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+  </div>
+
+  <p style="color: white;"><i>Frameworks_Ceiling_Sheet1copy</i>, 2023<br>
+    Antenna drop ceiling, Etched aluminum, radio, cables, aircraft cable, gripples, hardware
+  </p>
+
+  <main class="ceiling">
+
+    <div class="grid-item image1">
+      <img src="imgs/Ceiling/AlumBox.jpg" alt="" loading="lazy" />
+    </div>
+
+    <div class="grid-item image2">
+      <img src="imgs/Ceiling/HeartBit.jpg" alt="" loading="lazy" />
+    </div>
+
+    <div class="grid-item image3">
+      <img src="imgs/Ceiling/IronTile.jpg" alt="" loading="lazy" />
+    </div>
+
+    <div class="grid-item image4">
+      <img src="imgs/Ceiling/Outlets.gif" alt="" loading="lazy" />
+    </div>
+
+    <div class="grid-item image7">
+      <img src="imgs/Ceiling/drawing.jpg" alt="" loading="lazy" />
+    </div>
+
+    <div class="grid-item image5">
+      <img src="imgs/Ceiling/Scan2.jpeg" alt="" loading="lazy" />
+    </div>
+
+    <div class="grid-item image6">
+      <img src="imgs/Ceiling/Scan3.jpg" alt="" loading="lazy" />
+    </div>
+ 
+    <div class="grid-item caption1">
+      <p style="color: white;"><i>Tamperproof Heart Bolts</i>, 2023<br>
+        Brass<br>
+      </p>
+    </div>
+
+    <div class="grid-item caption2">
+      <p style="color: white;"><i>Tamperproof Heart Bolt Patent</i><br>
+      </p>
+    </div>
+
+    <div class="grid-item caption3">
+      <p style="color: white;"><i>Frameworks_Tile_Sheet1copy_D2</i>, 2023<br>
+        Graphite on Denril and acrylic
+      </p>
+    </div>
+
+    <div class="grid-item caption4">
+      <p style="color: white;"><i>OutletCovers_3-8, 2023</i>2023<br>
+      Acrylic<br></p>
+    </div>
+
+    <div class="grid-item caption5">
+      <p style="color: white;"><i>Frameworks_Tile_Sheet1copy_H5</i>, 2023<br> 
+        Iron and miscellaneous objects</p>
+
+      </p>
+    </div>
+
+  </main>
+
+</body>
+
+</html>
+
+
+
+
