--- a/ceiling.html
+++ b/ceiling.html
@@ -70,7 +70,7 @@
     </div>
 
     <div class="grid-item caption4">
-      <p style="color: white;"><i>OutletCovers_3-8, 2023</i>2023<br>
+      <p style="color: white;"><i>OutletCovers_3-8, 2023</i><br>
       Acrylic<br></p>
     </div>
 
