--- a/people.html
+++ b/people.html
@@ -10,10 +10,10 @@
   <link rel="icon" type="image/png" href="dove.png" />
 </head>
 
-<body><center>
+<body>
   <p style="color: white; font-size: 20px;">
 
-People I admire, work with, and love (ongoing list): 
+    People I admire, work with, and love (ongoing list):
 
 <ul style="list-style-type: none; display: inline-block;">
   <li style="margin-bottom: 10px;"></listyle><a href="https://luisedgarmejicanos.com/">Luis Edgar Mejicanos</a></li>
@@ -37,7 +37,6 @@ People I admire, work with, and love (ongoing list):
 
 </p>
 
-</center>
 </body>
 
 </html>
