--- a/people.html
+++ b/people.html
@@ -31,6 +31,7 @@
   <li style="margin-bottom: 10px;"><a href="https://www.mandengarchives.com/">Marcelline Mandeng Nken</a></li>
   <li style="margin-bottom: 10px;"><a href="https://www.yacinetilalafall.com/">Yacine Tilala Fall</a></li>
   <li style="margin-bottom: 10px;"><a href="https://www.beverlyacha.com/">Beverly Acha</a></li>
+    <li style="margin-bottom: 10px;"><a href="https://www.davionalston.com/">Davion Alston</a></li>
 </ul>
 
 
